--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.10",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-ble-manager": "^8.5.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
