--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.10",
     "@types/node": "^18.11.18",
     "@types/react-dom": "^18.0.10",
+    "buffer": "^6.0.3",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-ble-manager": "^8.5.0",
